Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_names = []\n",
+    "city_names = for city in city_indicies: \n",
     "\n",
     "city_names"
    ]
