Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -260,7 +260,7 @@
    "source": [
     "city_names = []\n",
     "for city in city_indices: \n",
-    "    city_names.append(cities[city])\n",
+    "    city_names.append(cities[city][])\n",
     "\n",
     "city_names"
    ]
