--- a/index.ipynb
+++ b/index.ipynb
@@ -255,13 +255,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "names_and_ranks = []\n",
     "for city in city_indices:\n",
-    "    names_and_ranks.append(f'{}')\n",
+    "    names_and_ranks.append(f'{city + 1}. {cities[city]}')\n",
     "\n",
     "names_and_ranks\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
