--- a/index.ipynb
+++ b/index.ipynb
@@ -255,27 +255,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[\"1. ['Buenos Aires', 'Toronto', 'Pyeongchang', 'Marakesh', 'Albuquerque', 'Los Cabos', 'Greenville', 'Archipelago Sea', 'Walla Walla Valley', 'Salina Island', 'Solta', 'Iguazu Falls']\",\n",
-       " \"2. ['Buenos Aires', 'Toronto', 'Pyeongchang', 'Marakesh', 'Albuquerque', 'Los Cabos', 'Greenville', 'Archipelago Sea', 'Walla Walla Valley', 'Salina Island', 'Solta', 'Iguazu Falls']\",\n",
-       " \"3. ['Buenos Aires', 'Toronto', 'Pyeongchang', 'Marakesh', 'Albuquerque', 'Los Cabos', 'Greenville', 'Archipelago Sea', 'Walla Walla Valley', 'Salina Island', 'Solta', 'Iguazu Falls']\",\n",
-       " \"4. ['Buenos Aires', 'Toronto', 'Pyeongchang', 'Marakesh', 'Albuquerque', 'Los Cabos', 'Greenville', 'Archipelago Sea', 'Walla Walla Valley', 'Salina Island', 'Solta', 'Iguazu Falls']\",\n",
-       " \"5. ['Buenos Aires', 'Toronto', 'Pyeongchang', 'Marakesh', 'Albuquerque', 'Los Cabos', 'Greenville', 'Archipelago Sea', 'Walla Walla Valley', 'Salina Island', 'Solta', 'Iguazu Falls']\",\n",
-       " \"6. ['Buenos Aires', 'Toronto', 'Pyeongchang', 'Marakesh', 'Albuquerque', 'Los Cabos', 'Greenville', 'Archipelago Sea', 'Walla Walla Valley', 'Salina Island', 'Solta', 'Iguazu Falls']\",\n",
-       " \"7. ['Buenos Aires', 'Toronto', 'Pyeongchang', 'Marakesh', 'Albuquerque', 'Los Cabos', 'Greenville', 'Archipelago Sea', 'Walla Walla Valley', 'Salina Island', 'Solta', 'Iguazu Falls']\",\n",
-       " \"8. ['Buenos Aires', 'Toronto', 'Pyeongchang', 'Marakesh', 'Albuquerque', 'Los Cabos', 'Greenville', 'Archipelago Sea', 'Walla Walla Valley', 'Salina Island', 'Solta', 'Iguazu Falls']\",\n",
-       " \"9. ['Buenos Aires', 'Toronto', 'Pyeongchang', 'Marakesh', 'Albuquerque', 'Los Cabos', 'Greenville', 'Archipelago Sea', 'Walla Walla Valley', 'Salina Island', 'Solta', 'Iguazu Falls']\",\n",
-       " \"10. ['Buenos Aires', 'Toronto', 'Pyeongchang', 'Marakesh', 'Albuquerque', 'Los Cabos', 'Greenville', 'Archipelago Sea', 'Walla Walla Valley', 'Salina Island', 'Solta', 'Iguazu Falls']\",\n",
-       " \"11. ['Buenos Aires', 'Toronto', 'Pyeongchang', 'Marakesh', 'Albuquerque', 'Los Cabos', 'Greenville', 'Archipelago Sea', 'Walla Walla Valley', 'Salina Island', 'Solta', 'Iguazu Falls']\",\n",
-       " \"12. ['Buenos Aires', 'Toronto', 'Pyeongchang', 'Marakesh', 'Albuquerque', 'Los Cabos', 'Greenville', 'Archipelago Sea', 'Walla Walla Valley', 'Salina Island', 'Solta', 'Iguazu Falls']\"]"
+       "['1. Buenos Aires',\n",
+       " '2. Toronto',\n",
+       " '3. Pyeongchang',\n",
+       " '4. Marakesh',\n",
+       " '5. Albuquerque',\n",
+       " '6. Los Cabos',\n",
+       " '7. Greenville',\n",
+       " '8. Archipelago Sea',\n",
+       " '9. Walla Walla Valley',\n",
+       " '10. Salina Island',\n",
+       " '11. Solta',\n",
+       " '12. Iguazu Falls']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
    "source": [
     "names_and_ranks = []\n",
     "for city in city_indices:\n",
-    "    names_and_ranks.append(f'{city + 1}. {city_names[ci]}')\n",
+    "    names_and_ranks.append(f'{city + 1}. {city_names[city]}')\n",
     "\n",
     "names_and_ranks\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
@@ -291,9 +291,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Buenos Aires\n",
+      "2. Toronto\n",
+      "12. Iguazu Falls\n"
+     ]
+    }
+   ],
    "source": [
     "print(names_and_ranks[0]) # '1. Buenos Aires'\n",
     "print(names_and_ranks[1]) # '2. Toronto'\n",
