--- a/index.ipynb
+++ b/index.ipynb
@@ -420,7 +420,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = []"
+    "city_areas = []\n",
+    "for city in "
    ]
   },
   {
